[package]
name = "gazelle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gazelle"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version =  "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
log = "0.4"
env_logger = "0.8.4"
thiserror = "1.0"
serde = "1.0.136"
serde_json = "1.0"
url = "2.2.2"
urlencoding = "2.1.0"
derive-new = "0.5"
derive-getters = "0.2.0"
bigdecimal = "0.3.0"
num-bigint = "0.4"
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
